# bigraph-viz

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  release.sh  setup.py
.github/workflows/: format_notebook_to_html.yml  notebook_to_html.yml  notebooks.yml  pytest.yml
bigraph_viz/: .#visualize_types.py  __init__.py  convert.py  diagram.py  dict_utils.py  plot.py  test.py  test_ecoli.py  test_notebooks.py  visualize.py  visualize_types.py
bigraph_viz/methods/: generate_graph_dict.py
bigraphviz/: __init__.py  dict_utils.py  plot.py  test.py
data/: gut_microbiome  sed2-demo.json
notebooks/: BATS-FBA.ipynb  BMCA.ipynb  SED2.ipynb  basics.html  basics.ipynb  basics2.html  basics2.ipynb  basics_pres.html  basics_pres.ipynb  bats-fba.ipynb  bigraph_example.html  bigraph_example.ipynb  carbStor.ipynb  ccb.ipynb  celegans.ipynb  cell_atlas.html  cell_atlas.ipynb  custom_template.tpl  duke_nams.html  duke_nams.ipynb  ecoli.html  ecoli.ipynb  ecoli2.html  ecoli2.ipynb  ecoli2026.html  ecoli_biomanufacturing.ipynb  format.html  format.ipynb  generate_readme.py  gut_microbiome.html  gut_microbiome.ipynb  index.html  metacomposite.html  metacomposite.ipynb  notebooks.json  sed2-wg.ipynb  show_herbert.html  show_herbert.ipynb  simulation_experiment.ipynb  test1.ipynb  (+3 more)
notebooks/DetectorCell/: 20240920-data-visualization.ipynb
notebooks/DetectorCell/data/: 20240714-discovery-data.csv  20240714-discovery-platemap.csv  20240806-detector-cells-platemap.csv
scripts/: dev-link.sh
templates/: custom_template.tpl
