[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigraph-viz"
version = "0.1.15"
description = "A visualization method for displaying the structure of process bigraphs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
    { name = "Eran Agmon", email = "agmon.eran@gmail.com" }
]
maintainers = [
    { name = "Eran Agmon", email = "agmon.eran@gmail.com" }
]

keywords = ["visualization", "systems biology", "bigraph", "graphviz", "vivarium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "bigraph-schema",
    "process-bigraph",
    "graphviz"
]

[tool.setuptools]
packages = ["bigraph_viz"]

[tool.uv.sources]
bigraph-schema = { path = "../bigraph-schema", editable = true }
process-bigraph = { path = "../process-bigraph", editable = true }
